feat: migrate authentication service to Java IAM
